k8s/monitoring/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/part-of: sistema-escolar
    kubernetes.io/metadata.name: monitoring
